# Code-Archive

./: .gitignore
JavaScript/learn_nextjs/nextjs_project/: package.json
JavaScript/store/: docker-compose.yaml
Python/FastAPI_basics/: README.md  main.py  pyproject.toml
Python/Randomizer_API/: README.md  main.py  pyproject.toml
Python/blog_api/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
Python/blog_api/alembic/: env.py
Python/blog_api/alembic/versions/: 20260520_0001_initial_tables.py
Python/blog_api/app/core/: config.py  dependencies.py  security.py
Python/blog_api/app/crud/: post.py  user.py
Python/blog_api/app/database/: session.py
Python/blog_api/app/models/: post.py  user.py
Python/blog_api/app/routers/: auth.py  posts.py  users.py
Python/blog_api/app/schemas/: post.py  token.py  user.py
Python/blog_api/app/scripts/: wait_for_db.py
Python/box_print/: main.py  pyproject.toml
Python/debug_coin_toss/: main.py  pyproject.toml
Python/factorial_logging/: factorial_program.txt  main.py  pyproject.toml
Rust/restaurant/src/: front_of_house.rs  lib.rs
Rust/restaurant/src/front_of_house/: hosting.rs
SQL/SSMS/Centro-Medico/: Centro-Medico.slnx
SQL/SSMS/Centro-Medico/Proyecto-Inicial/: Proyecto-Inicial.ssmssqlproj
SQL/SSMS/CentroMedico/CentroMedico/: CentroMedico.ssmssqlproj  TablaPaciente.sql
SQL/T-SQL/CentroMedico/: CentroMedico.slnx
SQL/T-SQL/CentroMedico/CentroMedico/: BaseDeDatos.sql  CentroMedico.ssmssqlproj  CrearBaseDeDatos.sql  HolaMundo.sql  TablaConcepto.sql  (+13 more)
(+18 files in other folders)
